objects/Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error_Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Attempt_Time__c</fullName>
        <label>Last_Attempt_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Run_Time__c</fullName>
        <label>Next_Run_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <label>Operation_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Ids__c</fullName>
        <description>Opportunity/Order Id</description>
        <label>Record_Ids</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request_Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Payload__c</fullName>
        <label>Request_Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response_Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <label>Retry_Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Integration_Log</label>
    <nameField>
        <label>Integration_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>